[package]
name = "computools"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

gloo = "0.11.0"
gloo-net = "0.6.0"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
serde = "1.0.218"
serde_json = "1.0.139"
serde_yaml = "0.9.34+deprecated"
regex = "1.11.1"
wasm-logger = "0.2.0"
log = "0.4.26"
web-sys = { version = "0.3.69", features = ["HtmlSelectElement", "HtmlInputElement", "EventTarget", "Navigator", "Clipboard"] }
nalgebra = "0.33.2"
chrono = "0.4.40"
gloo-timers = "0.3"
chrono-tz = "0.10.1"
wasm-bindgen-futures = "0.4.50"
crc = "3.2.1"
base64 = "0.22.1"
gloo-file = "0.3.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
md-5 = "0.10"
futures = "0.3.31"  # 추가된 종속성
indexmap = "2.8.0"
